# Pacem

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: Camera.h  GpuResource.h  Gui.h  Mesh.h  PerFrameResource.h  Pipeline.h  RenderPass.h  Renderer.h  ResourcePool.h  RingBuffer.h  Types.h  VkInit.h  VkTypes.h  common.h  gpuresource.h  gui.h  mesh.h  pipeline.h  renderer.h  renderpass.h  shader.h  types.h  vkinit.h
shaders/: CMakeLists.txt  default.frag  default.geom  editorGrid.frag  editorGrid.vert  lightCull.comp  lightShade.comp  lineDraw.frag  lineDraw.vert  mainPass.frag  mainPass.vert  triangle.frag  triangle.vert
src/: CMakeLists.txt  Camera.cpp  GpuResource.cpp  Gui.cpp  Main.cpp  Mesh.cpp  PerFrameResource.cpp  Pipeline.cpp  RenderPass.cpp  Renderer.cpp  Shader.cpp  VkInit.cpp  camera.cpp  common.h  gpuresource.cpp  gui.cpp  main.cpp  mesh.cpp  meshLoader.cpp  meshLoader.h  pipeline.cpp  renderer.cpp  renderer.h  renderpass.cpp  shader.cpp  types.h  vkinit.cpp  vkinit.h  vma.h
